# meetdub

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.ja.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
meetdub/: __init__.py  __main__.py  audio.py  auth_cli.py  azure_auth.py  backend.py  cli.py  config.py  hotkeys.py  installer.py  languages.py  runner.py  secrets.py  transcript.py  translator.py  tui_input.py  ui.py  vad.py
scripts/: bootstrap.py
tests/: test_audio.py  test_backend.py  test_languages.py  test_secrets.py  test_translator.py  test_vad.py
