[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meetdub"
version = "0.1.0"
description = "Real-time speech-to-speech translation for any meeting app — your voice, every language."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "meetdub contributors" }]
keywords = ["translation", "realtime", "openai", "teams", "zoom", "blackhole", "speech-to-speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Communications :: Conferencing",
]
dependencies = [
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "pynput>=1.7.6",
    "azure-identity>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
meetdub = "meetdub.cli:app"

[project.urls]
Homepage = "https://github.com/Yarta-AI/meetdub"
Repository = "https://github.com/Yarta-AI/meetdub"
Issues = "https://github.com/Yarta-AI/meetdub/issues"

[tool.hatch.build.targets.wheel]
packages = ["meetdub"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length is enforced by formatter, not linter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
strict_optional = false
